app-test/testdata/typesystem/neg/pattern-matching-analysis-exhaustivity-algebraic-type/check/patmat.check
Error in "testdata/typesystem/neg/pattern-matching-analysis-exhaustivity-algebraic-type/src/patmat.cal" on line 7:
                case t of
                     ^
case may not be exhaustive.

It would fail on patterns: A, B(_)